maintenance(endpoints) modified and commented
